--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@
 }
 
 .container{
+    max-width: 1200px;
     margin: 0 auto;
-    width: 1200px;
 }
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: stretch;
+}
+
