2a parte esercizio (offset) completata + correzione offset file css

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@
     justify-content: center;
 }
 
-.container.fixed-height .row.primary {
+.container.fixed-height .row.primary,
+.container.offset .fixed-height{
     height: 40px;
 }
