--- a/bonus/style.css
+++ b/bonus/style.css
@@ -28,3 +28,15 @@
 .green{
     background-color: rgb(78, 138, 73);
 }
+
+.light-green{
+    background-color: rgb(76, 160, 82);
+}
+
+.dark-pink{
+    background-color: rgb(209, 152, 104);
+}
+
+.pink{
+    background-color: rgb(251, 190, 127);
+}
