--- a/bonus/style.css
+++ b/bonus/style.css
@@ -54,3 +54,12 @@
 .light-red{
     background-color: rgb(221, 37, 19);
 }
+
+
+.brown{
+    background-color: rgb(82, 45, 5);
+}
+
+.light-brown{
+    background-color: rgb(215, 167, 33);
+}
