--- a/bonus12/style.css
+++ b/bonus12/style.css
@@ -86,3 +86,59 @@
 .aqua{
     background-color: rgb(55, 173, 185);
 }
+
+.t-green{
+    background-color: rgb(158, 204, 94);
+}
+
+.pale-red{
+    background-color: rgb(230, 120, 86);
+}
+
+.m-blue{
+    background-color: rgb(77, 194, 228);
+}
+
+.orange-3{
+    background-color: rgb(230, 140, 46);
+}
+
+.jeans{
+    background-color: rgb(141, 192, 220);
+}
+
+.tu-green{
+    background-color: rgb(65, 161, 17);
+}
+
+.brown{
+    background-color: rgb(164, 105, 36);
+}
+
+.tu-green-2{
+    background-color: rgb(175, 190, 99);
+}
+
+.ocra{
+    background-color: rgb(212, 176, 23);
+}
+
+.p-blue{
+    background-color: rgb(60, 130, 186);
+}
+
+.p-aqua{
+    background-color: rgb(143, 189, 190) ;
+}
+
+.grey{
+    background-color: rgb(238, 234, 230) ;
+}
+
+.yellow-2{
+    background-color: rgb(217, 166, 22);
+}
+
+.p-dark-blue{
+    background-color: rgb(36, 47, 95);
+}
